--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Norton dos Santos",
   "license": "MIT",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "mongodb": "^4.0.1",
