--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
+    "serve-favicon": "^2.5.0",
     "sharp": "^0.28.3"
   }
 }
